Core #3887: Store and show stored collaborator display name. Mark collaborator in pink when user doesn't exist.